separated notebooks, minor update

--- a/src/run_mlp.ipynb
+++ b/src/run_mlp.ipynb
@@ -4,6 +4,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# **MLP with extended physics loss function (Option 1)**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## **Running the models using the 'modelling' package**\n",
     "\n",
     "A notebook through which different modelling configurations can be ran, using the ``modelling`` package. It follows the steps of:\n",
@@ -7028,7 +7035,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -7275,138 +7282,6 @@
     "plt.title(\"Predictions vs. Ground Truth\")\n",
     "plt.legend()\n",
     "plt.show()\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Simple MSE Loss function"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# copied from best_params/best_params_baseline.txt\n",
-    "best_params_baseline = {\"n_hidden_layers\": 4, \"n_hidden_units\": 194, \"lr\": 0.0025532081590650484, \"weight_decay\": 1.3029599229861795e-08, \"batch_size\": 16}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch 1/50 - Train Loss: 0.056461 - Val Loss: 0.078200\n",
-      "Epoch 2/50 - Train Loss: 0.033327 - Val Loss: 0.034181\n",
-      "Epoch 3/50 - Train Loss: 0.024612 - Val Loss: 0.036997\n",
-      "Epoch 4/50 - Train Loss: 0.020388 - Val Loss: 0.027525\n",
-      "Epoch 5/50 - Train Loss: 0.017908 - Val Loss: 0.028525\n",
-      "Epoch 6/50 - Train Loss: 0.016590 - Val Loss: 0.028329\n",
-      "Epoch 7/50 - Train Loss: 0.018531 - Val Loss: 0.022859\n",
-      "Epoch 8/50 - Train Loss: 0.017043 - Val Loss: 0.021024\n",
-      "Epoch 9/50 - Train Loss: 0.015320 - Val Loss: 0.021388\n",
-      "Epoch 10/50 - Train Loss: 0.014659 - Val Loss: 0.020307\n",
-      "Epoch 11/50 - Train Loss: 0.015040 - Val Loss: 0.022117\n",
-      "Epoch 12/50 - Train Loss: 0.014961 - Val Loss: 0.022487\n",
-      "Epoch 13/50 - Train Loss: 0.015082 - Val Loss: 0.023689\n",
-      "Epoch 14/50 - Train Loss: 0.014757 - Val Loss: 0.021779\n",
-      "Epoch 15/50 - Train Loss: 0.015012 - Val Loss: 0.020729\n",
-      "Epoch 16/50 - Train Loss: 0.014366 - Val Loss: 0.020447\n",
-      "Epoch 17/50 - Train Loss: 0.014167 - Val Loss: 0.021481\n",
-      "Epoch 18/50 - Train Loss: 0.014991 - Val Loss: 0.021874\n",
-      "Epoch 19/50 - Train Loss: 0.015447 - Val Loss: 0.020984\n",
-      "Epoch 20/50 - Train Loss: 0.016376 - Val Loss: 0.025494\n",
-      "Epoch 21/50 - Train Loss: 0.014786 - Val Loss: 0.025825\n",
-      "Epoch 22/50 - Train Loss: 0.015110 - Val Loss: 0.022120\n",
-      "Epoch 23/50 - Train Loss: 0.013966 - Val Loss: 0.020869\n",
-      "Epoch 24/50 - Train Loss: 0.014886 - Val Loss: 0.020164\n",
-      "Epoch 25/50 - Train Loss: 0.014662 - Val Loss: 0.025532\n",
-      "Epoch 26/50 - Train Loss: 0.014653 - Val Loss: 0.023267\n",
-      "Epoch 27/50 - Train Loss: 0.014408 - Val Loss: 0.022118\n",
-      "Epoch 28/50 - Train Loss: 0.014416 - Val Loss: 0.021438\n",
-      "Epoch 29/50 - Train Loss: 0.014246 - Val Loss: 0.021705\n",
-      "Epoch 30/50 - Train Loss: 0.013868 - Val Loss: 0.023052\n",
-      "Epoch 31/50 - Train Loss: 0.013474 - Val Loss: 0.022233\n",
-      "Epoch 32/50 - Train Loss: 0.013491 - Val Loss: 0.024168\n",
-      "Epoch 33/50 - Train Loss: 0.013584 - Val Loss: 0.022877\n",
-      "Epoch 34/50 - Train Loss: 0.013623 - Val Loss: 0.023225\n",
-      "Epoch 35/50 - Train Loss: 0.014052 - Val Loss: 0.023701\n",
-      "Epoch 36/50 - Train Loss: 0.014045 - Val Loss: 0.022953\n",
-      "Epoch 37/50 - Train Loss: 0.013514 - Val Loss: 0.024930\n",
-      "Epoch 38/50 - Train Loss: 0.013526 - Val Loss: 0.022475\n",
-      "Epoch 39/50 - Train Loss: 0.012936 - Val Loss: 0.022267\n",
-      "Epoch 40/50 - Train Loss: 0.013804 - Val Loss: 0.022759\n",
-      "Epoch 41/50 - Train Loss: 0.013329 - Val Loss: 0.024522\n",
-      "Epoch 42/50 - Train Loss: 0.012454 - Val Loss: 0.022941\n",
-      "Epoch 43/50 - Train Loss: 0.012895 - Val Loss: 0.022869\n",
-      "Epoch 44/50 - Train Loss: 0.013377 - Val Loss: 0.026006\n",
-      "Epoch 45/50 - Train Loss: 0.012658 - Val Loss: 0.022235\n",
-      "Epoch 46/50 - Train Loss: 0.012429 - Val Loss: 0.023287\n",
-      "Epoch 47/50 - Train Loss: 0.012819 - Val Loss: 0.024246\n",
-      "Epoch 48/50 - Train Loss: 0.012599 - Val Loss: 0.023726\n",
-      "Epoch 49/50 - Train Loss: 0.012503 - Val Loss: 0.030403\n",
-      "Epoch 50/50 - Train Loss: 0.013494 - Val Loss: 0.048588\n",
-      "Model saved as best_mlp_no2_baseline.pth in Model folder\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Train the model with the best hyperparameters\n",
-    "best_model_baseline = BasicMLP(\n",
-    "    N_INPUT_UNITS=train_dataset.__n_features_in__(),\n",
-    "    N_HIDDEN_LAYERS=best_params_baseline[\"n_hidden_layers\"],\n",
-    "    N_HIDDEN_UNITS=best_params_baseline[\"n_hidden_units\"],\n",
-    "    N_OUTPUT_UNITS=train_dataset.__n_features_out__(),\n",
-    "    loss_function=\"MSE\",\n",
-    ")\n",
-    "\n",
-    "# Create train & validation loaders with the best batch size\n",
-    "train_loader = DataLoader(train_dataset, batch_size=best_params_baseline[\"batch_size\"], shuffle=True)\n",
-    "val_loader = DataLoader(val_dataset, batch_size=best_params_baseline[\"batch_size\"], shuffle=False)\n",
-    "\n",
-    "# Train the model\n",
-    "best_model_baseline.train_model(train_loader, val_loader, epochs=50, lr=best_params_baseline[\"lr\"], weight_decay=best_params_baseline[\"weight_decay\"], device=device)\n",
-    "\n",
-    "# Save the trained model\n",
-    "torch.save(best_model_baseline.state_dict(), f\"{MODEL_PATH}/best_mlp_no2_baseline.pth\")\n",
-    "print(\"Model saved as best_mlp_no2_baseline.pth in Model folder\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Test MSE Loss: 290.411582\n",
-      "Test RMSE Loss: 16.724482\n",
-      "Test SMAPE Loss: 42.489302%\n"
-     ]
-    }
-   ],
-   "source": [
-    "best_model_baseline.load_state_dict(torch.load(f\"{MODEL_PATH}/best_mlp_no2_baseline.pth\"))\n",
-    "best_model_baseline.eval()\n",
-    "\n",
-    "# Create the DataLoader for the test dataset\n",
-    "test_loader = DataLoader(test_dataset, batch_size=best_params_baseline[\"batch_size\"], shuffle=False)\n",
-    "\n",
-    "# Evaluate the model on the test dataset\n",
-    "df_minmax = pd.read_csv(MINMAX_PATH, sep=';')\n",
-    "min_value = df_minmax[\"min\"].values\n",
-    "max_value = df_minmax[\"max\"].values\n",
-    "mse_baseline, rmse_val_baseline, smape_val_baseline = best_model_baseline.test_model(test_loader, min_value=min_value, max_value=max_value, device=\"cpu\")\n",
-    "\n"
    ]
   }
  ],
