--- a/src/run_mlp_pde.ipynb
+++ b/src/run_mlp_pde.ipynb
@@ -626,7 +626,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1517,67 +1517,67 @@
     }
    ],
    "source": [
-    "import matplotlib.pyplot as plt\n",
-    "# Define basic training\n",
-    "# Create train & validation loaders (following the original code)\n",
-    "n_hidden_layers = 2\n",
-    "n_hidden_units = 64\n",
-    "batch_size = 32\n",
-    "lr = 1e-5\n",
-    "weight_decay = 1e-4\n",
+    "# import matplotlib.pyplot as plt\n",
+    "# # Define basic training\n",
+    "# # Create train & validation loaders (following the original code)\n",
+    "# n_hidden_layers = 2\n",
+    "# n_hidden_units = 64\n",
+    "# batch_size = 32\n",
+    "# lr = 1e-5\n",
+    "# weight_decay = 1e-4\n",
     "\n",
-    "train_loader = DataLoader(train_dataset, batch_size=batch_size, shuffle=True)\n",
-    "val_loader = DataLoader(val_dataset, batch_size=batch_size, shuffle=False)\n",
+    "# train_loader = DataLoader(train_dataset, batch_size=batch_size, shuffle=True)\n",
+    "# val_loader = DataLoader(val_dataset, batch_size=batch_size, shuffle=False)\n",
     "\n",
-    "# Initialize MLP model\n",
-    "model = BasicMLP(\n",
-    "    N_INPUT_UNITS=train_dataset.__n_features_in__(),\n",
-    "    N_HIDDEN_LAYERS=n_hidden_layers,\n",
-    "    N_HIDDEN_UNITS=n_hidden_units,\n",
-    "    N_OUTPUT_UNITS=train_dataset.__n_features_out__(),\n",
-    "    loss_function=LOSS_FUNC,\n",
-    ")\n",
+    "# # Initialize MLP model\n",
+    "# model = BasicMLP(\n",
+    "#     N_INPUT_UNITS=train_dataset.__n_features_in__(),\n",
+    "#     N_HIDDEN_LAYERS=n_hidden_layers,\n",
+    "#     N_HIDDEN_UNITS=n_hidden_units,\n",
+    "#     N_OUTPUT_UNITS=train_dataset.__n_features_out__(),\n",
+    "#     loss_function=LOSS_FUNC,\n",
+    "# )\n",
     "\n",
-    "# After training, we can plot y_phy vs y_pred for both training and validation data\n",
-    "_, train_losses, val_losses, all_y_phy_train, all_y_pred_train, all_y_phy_val, all_y_pred_val = model.train_model(train_loader, val_loader, epochs=50, lr=lr, weight_decay=weight_decay, device=device)\n",
+    "# # After training, we can plot y_phy vs y_pred for both training and validation data\n",
+    "# _, train_losses, val_losses, all_y_phy_train, all_y_pred_train, all_y_phy_val, all_y_pred_val = model.train_model(train_loader, val_loader, epochs=50, lr=lr, weight_decay=weight_decay, device=device)\n",
     "\n",
-    "# Plot Training Loss vs Validation Loss\n",
-    "epochs = range(1, len(train_losses) + 1)\n",
-    "plt.figure(figsize=(8, 6))\n",
-    "plt.plot(epochs, train_losses, label=\"Train Loss\", color=\"blue\", linestyle=\"-\")\n",
-    "plt.plot(epochs, val_losses, label=\"Validation Loss\", color=\"red\", linestyle=\"--\")\n",
-    "plt.xlabel(\"Epochs\")\n",
-    "plt.ylabel(\"Loss\")\n",
-    "plt.title(\"Training vs Validation Loss\")\n",
-    "plt.legend()\n",
-    "plt.grid(True)\n",
-    "plt.show()\n",
+    "# # Plot Training Loss vs Validation Loss\n",
+    "# epochs = range(1, len(train_losses) + 1)\n",
+    "# plt.figure(figsize=(8, 6))\n",
+    "# plt.plot(epochs, train_losses, label=\"Train Loss\", color=\"blue\", linestyle=\"-\")\n",
+    "# plt.plot(epochs, val_losses, label=\"Validation Loss\", color=\"red\", linestyle=\"--\")\n",
+    "# plt.xlabel(\"Epochs\")\n",
+    "# plt.ylabel(\"Loss\")\n",
+    "# plt.title(\"Training vs Validation Loss\")\n",
+    "# plt.legend()\n",
+    "# plt.grid(True)\n",
+    "# plt.show()\n",
     "\n",
-    "# Plot y_phy vs y_pred for training data\n",
-    "plt.figure(figsize=(8, 6))\n",
-    "plt.scatter(all_y_phy_train, all_y_pred_train, label=\"Train\", alpha=0.5, color=\"blue\")\n",
-    "plt.xlabel(\"y_phy (True Values)\")\n",
-    "plt.ylabel(\"y_pred (Predicted Values)\")\n",
-    "plt.title(\"Training Data: y_phy vs y_pred\")\n",
-    "plt.legend()\n",
-    "plt.grid(True)\n",
-    "plt.show()\n",
+    "# # Plot y_phy vs y_pred for training data\n",
+    "# plt.figure(figsize=(8, 6))\n",
+    "# plt.scatter(all_y_phy_train, all_y_pred_train, label=\"Train\", alpha=0.5, color=\"blue\")\n",
+    "# plt.xlabel(\"y_phy (True Values)\")\n",
+    "# plt.ylabel(\"y_pred (Predicted Values)\")\n",
+    "# plt.title(\"Training Data: y_phy vs y_pred\")\n",
+    "# plt.legend()\n",
+    "# plt.grid(True)\n",
+    "# plt.show()\n",
     "\n",
-    "# Plot y_phy vs y_pred for validation data\n",
-    "plt.figure(figsize=(8, 6))\n",
-    "plt.scatter(all_y_phy_val, all_y_pred_val, label=\"Validation\", alpha=0.5, color=\"red\")\n",
-    "plt.xlabel(\"y_phy (True Values)\")\n",
-    "plt.ylabel(\"y_pred (Predicted Values)\")\n",
-    "plt.title(\"Validation Data: y_phy vs y_pred\")\n",
-    "plt.legend()\n",
-    "plt.grid(True)\n",
-    "plt.show()\n",
+    "# # Plot y_phy vs y_pred for validation data\n",
+    "# plt.figure(figsize=(8, 6))\n",
+    "# plt.scatter(all_y_phy_val, all_y_pred_val, label=\"Validation\", alpha=0.5, color=\"red\")\n",
+    "# plt.xlabel(\"y_phy (True Values)\")\n",
+    "# plt.ylabel(\"y_pred (Predicted Values)\")\n",
+    "# plt.title(\"Validation Data: y_phy vs y_pred\")\n",
+    "# plt.legend()\n",
+    "# plt.grid(True)\n",
+    "# plt.show()\n",
     "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1591,19 +1591,19 @@
     }
    ],
    "source": [
-    "# Create the DataLoader for the test dataset\n",
-    "test_loader = DataLoader(test_dataset, batch_size=batch_size, shuffle=False)\n",
+    "# # Create the DataLoader for the test dataset\n",
+    "# test_loader = DataLoader(test_dataset, batch_size=batch_size, shuffle=False)\n",
     "\n",
-    "# Evaluate the model on the test dataset\n",
-    "df_minmax = pd.read_csv(MINMAX_PATH, sep=';')\n",
-    "min_value = df_minmax[\"min\"].values\n",
-    "max_value = df_minmax[\"max\"].values\n",
-    "mse, rmse_val, smape_val = model.test_model(test_loader, min_value=min_value, max_value=max_value, device=\"cpu\")"
+    "# # Evaluate the model on the test dataset\n",
+    "# df_minmax = pd.read_csv(MINMAX_PATH, sep=';')\n",
+    "# min_value = df_minmax[\"min\"].values\n",
+    "# max_value = df_minmax[\"max\"].values\n",
+    "# mse, rmse_val, smape_val = model.test_model(test_loader, min_value=min_value, max_value=max_value, device=\"cpu\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1618,42 +1618,42 @@
     }
    ],
    "source": [
-    "import torch\n",
-    "import matplotlib.pyplot as plt\n",
+    "# import torch\n",
+    "# import matplotlib.pyplot as plt\n",
     "\n",
-    "# Ensure the model is in evaluation mode\n",
-    "model.eval()\n",
+    "# # Ensure the model is in evaluation mode\n",
+    "# model.eval()\n",
     "\n",
-    "y_preds = []\n",
-    "y_trues = []\n",
+    "# y_preds = []\n",
+    "# y_trues = []\n",
     "\n",
-    "# Iterate through the test set and collect predictions & ground truth\n",
-    "with torch.no_grad():\n",
-    "    for batch in test_loader:\n",
-    "        x_test, y_true = batch  # Get input and ground truth\n",
-    "        x_test = x_test.to(\"cpu\")  # Ensure data is on CPU if needed\n",
+    "# # Iterate through the test set and collect predictions & ground truth\n",
+    "# with torch.no_grad():\n",
+    "#     for batch in test_loader:\n",
+    "#         x_test, y_true = batch  # Get input and ground truth\n",
+    "#         x_test = x_test.to(\"cpu\")  # Ensure data is on CPU if needed\n",
     "\n",
-    "        # Get predictions\n",
-    "        y_pred = model(x_test)\n",
+    "#         # Get predictions\n",
+    "#         y_pred = model(x_test)\n",
     "\n",
-    "        # Store results\n",
-    "        y_preds.append(y_pred.cpu())\n",
-    "        y_trues.append(y_true.cpu())\n",
+    "#         # Store results\n",
+    "#         y_preds.append(y_pred.cpu())\n",
+    "#         y_trues.append(y_true.cpu())\n",
     "\n",
-    "# Convert lists to tensors\n",
-    "y_preds = torch.cat(y_preds, dim=0).numpy()\n",
-    "y_trues = torch.cat(y_trues, dim=0).numpy()\n",
+    "# # Convert lists to tensors\n",
+    "# y_preds = torch.cat(y_preds, dim=0).numpy()\n",
+    "# y_trues = torch.cat(y_trues, dim=0).numpy()\n",
     "\n",
-    "# Plot results\n",
-    "plt.figure(figsize=(10, 5))\n",
-    "plt.plot(y_trues.flatten(), label=\"Ground Truth (NO₂)\", linestyle=\"-\", color=\"blue\")\n",
-    "plt.scatter(range(len(y_preds.flatten())), y_preds.flatten(), label=\"Predictions\", color=\"black\", s=10)\n",
+    "# # Plot results\n",
+    "# plt.figure(figsize=(10, 5))\n",
+    "# plt.plot(y_trues.flatten(), label=\"Ground Truth (NO₂)\", linestyle=\"-\", color=\"blue\")\n",
+    "# plt.scatter(range(len(y_preds.flatten())), y_preds.flatten(), label=\"Predictions\", color=\"black\", s=10)\n",
     "\n",
-    "plt.xlabel(\"Time Step\")\n",
-    "plt.ylabel(\"NO₂ Level\")\n",
-    "plt.title(\"Predictions vs. Ground Truth\")\n",
-    "plt.legend()\n",
-    "plt.show()\n"
+    "# plt.xlabel(\"Time Step\")\n",
+    "# plt.ylabel(\"NO₂ Level\")\n",
+    "# plt.title(\"Predictions vs. Ground Truth\")\n",
+    "# plt.legend()\n",
+    "# plt.show()\n"
    ]
   },
   {
@@ -1676,6 +1676,7 @@
     "    lr = trial.suggest_loguniform(\"lr\", 1e-5, 1e-2)\n",
     "    weight_decay = trial.suggest_loguniform(\"weight_decay\", 1e-8, 1e-3)\n",
     "    batch_size = trial.suggest_categorical(\"batch_size\", [8, 16, 32, 64])  # Match the original hp['batch_sz']\n",
+    "    lambda_phy = trial.suggest_loguniform(\"lambda_phy\", 1e-5, 1e-1)\n",
     "\n",
     "    # Create train & validation loaders (following the original code)\n",
     "    train_loader = DataLoader(train_dataset, batch_size=batch_size, shuffle=True)\n",
@@ -1691,13 +1692,13 @@
     "    )\n",
     "\n",
     "    # Train and return validation loss\n",
-    "    val_loss = model.train_model(train_loader, val_loader, epochs=50, lr=lr, weight_decay=weight_decay, device=device)\n",
+    "    val_loss = model.train_model(train_loader, val_loader, epochs=50, lr=lr, weight_decay=weight_decay, lambda_phy = lambda_phy, device=device)\n",
     "    \n",
     "    return val_loss\n",
     "\n",
     "\n",
     "# Run Optuna optimization\n",
-    "study = optuna.create_study(direction=\"minimize\", study_name=\"mlp_hyperparameter_optimization_phy_test2\", storage=\"sqlite:///mlp_hyperparameter_optimization_phy.db\", load_if_exists=True)\n",
+    "study = optuna.create_study(direction=\"minimize\", study_name=\"mlp_hyperparameter_optimization_phy_pde1\", storage=\"sqlite:///mlp_hyperparameter_optimization_phy_pde.db\", load_if_exists=True)\n",
     "\n",
     "study.optimize(objective, n_trials=100)\n",
     "\n",
@@ -1816,8 +1817,8 @@
     "best_model.train_model(train_loader, val_loader, epochs=50, lr=best_params[\"lr\"], weight_decay=best_params[\"weight_decay\"], device=device)\n",
     "\n",
     "# Save the trained model\n",
-    "torch.save(best_model.state_dict(), f\"{MODEL_PATH}/best_mlp_no2_linear_test.pth\")\n",
-    "print(\"Model saved as best_mlp_no2.pth in Model folder\")"
+    "torch.save(best_model.state_dict(), f\"{MODEL_PATH}/best_mlp_no2_pde_numerical.pth\")\n",
+    "print(\"Model saved asbest_mlp_no2_pde_numerical.pth in Model folder\")"
    ]
   },
   {
@@ -1900,7 +1901,7 @@
     }
    ],
    "source": [
-    "best_model.load_state_dict(torch.load(f\"{MODEL_PATH}/best_mlp_no2_linear_test.pth\"))\n",
+    "best_model.load_state_dict(torch.load(f\"{MODEL_PATH}/best_mlp_no2_pde_numerical.pth\"))\n",
     "best_model.eval()\n",
     "\n",
     "# Create the DataLoader for the test dataset\n",
