changed y_phy equation to use abs(dist) to prevent minus distances, retuned, and also reran baseline notebook

--- a/src/run_baseline_mlp.ipynb
+++ b/src/run_baseline_mlp.ipynb
@@ -48,14 +48,6 @@
       "Modelling package initialized\n",
       "\n"
      ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/rachel/forecasting_smog_PEML/venv/lib/python3.10/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
     }
    ],
    "source": [
@@ -150,7 +142,7 @@
     {
      "data": {
       "text/plain": [
-       "<torch._C.Generator at 0x7f6c975b1cb0>"
+       "<torch._C.Generator at 0x7fba7e609f90>"
       ]
      },
      "execution_count": 4,
@@ -204,7 +196,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Imported train_2017_combined_u.csv\n",
+      "Imported train_2017_combined_u.csv\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "Imported train_2017_combined_y.csv\n",
       "Imported val_2017_combined_u.csv\n",
       "Imported val_2017_combined_y.csv\n",
@@ -656,56 +654,106 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 1/50 - Train Loss: 0.063506 - Val Loss: 0.085809\n",
-      "Epoch 2/50 - Train Loss: 0.042122 - Val Loss: 0.047536\n",
-      "Epoch 3/50 - Train Loss: 0.028085 - Val Loss: 0.034021\n",
-      "Epoch 4/50 - Train Loss: 0.023285 - Val Loss: 0.028039\n",
-      "Epoch 5/50 - Train Loss: 0.018907 - Val Loss: 0.026689\n",
-      "Epoch 6/50 - Train Loss: 0.018611 - Val Loss: 0.028076\n",
-      "Epoch 7/50 - Train Loss: 0.016566 - Val Loss: 0.021848\n",
-      "Epoch 8/50 - Train Loss: 0.015831 - Val Loss: 0.021026\n",
-      "Epoch 9/50 - Train Loss: 0.015232 - Val Loss: 0.019900\n",
-      "Epoch 10/50 - Train Loss: 0.015528 - Val Loss: 0.020679\n",
-      "Epoch 11/50 - Train Loss: 0.014674 - Val Loss: 0.019185\n",
-      "Epoch 12/50 - Train Loss: 0.014626 - Val Loss: 0.020357\n",
-      "Epoch 13/50 - Train Loss: 0.014504 - Val Loss: 0.021983\n",
-      "Epoch 14/50 - Train Loss: 0.015753 - Val Loss: 0.022637\n",
-      "Epoch 15/50 - Train Loss: 0.014321 - Val Loss: 0.020195\n",
-      "Epoch 16/50 - Train Loss: 0.014576 - Val Loss: 0.019730\n",
-      "Epoch 17/50 - Train Loss: 0.014555 - Val Loss: 0.020412\n",
-      "Epoch 18/50 - Train Loss: 0.015196 - Val Loss: 0.020504\n",
-      "Epoch 19/50 - Train Loss: 0.014060 - Val Loss: 0.023013\n",
-      "Epoch 20/50 - Train Loss: 0.014385 - Val Loss: 0.020497\n",
-      "Epoch 21/50 - Train Loss: 0.014227 - Val Loss: 0.021683\n",
-      "Epoch 22/50 - Train Loss: 0.014197 - Val Loss: 0.020436\n",
-      "Epoch 23/50 - Train Loss: 0.013779 - Val Loss: 0.020710\n",
-      "Epoch 24/50 - Train Loss: 0.014380 - Val Loss: 0.020363\n",
-      "Epoch 25/50 - Train Loss: 0.013463 - Val Loss: 0.020590\n",
-      "Epoch 26/50 - Train Loss: 0.013745 - Val Loss: 0.020743\n",
-      "Epoch 27/50 - Train Loss: 0.013204 - Val Loss: 0.021326\n",
-      "Epoch 28/50 - Train Loss: 0.012965 - Val Loss: 0.027283\n",
-      "Epoch 29/50 - Train Loss: 0.014518 - Val Loss: 0.024224\n",
-      "Epoch 30/50 - Train Loss: 0.013392 - Val Loss: 0.026208\n",
-      "Epoch 31/50 - Train Loss: 0.013007 - Val Loss: 0.022750\n",
-      "Epoch 32/50 - Train Loss: 0.013205 - Val Loss: 0.026532\n",
-      "Epoch 33/50 - Train Loss: 0.012978 - Val Loss: 0.029358\n",
-      "Epoch 34/50 - Train Loss: 0.013612 - Val Loss: 0.034878\n",
-      "Epoch 35/50 - Train Loss: 0.013300 - Val Loss: 0.029350\n",
-      "Epoch 36/50 - Train Loss: 0.013405 - Val Loss: 0.025054\n",
-      "Epoch 37/50 - Train Loss: 0.012747 - Val Loss: 0.022468\n",
-      "Epoch 38/50 - Train Loss: 0.012857 - Val Loss: 0.024861\n",
-      "Epoch 39/50 - Train Loss: 0.013094 - Val Loss: 0.024569\n",
-      "Epoch 40/50 - Train Loss: 0.014452 - Val Loss: 0.038626\n",
-      "Epoch 41/50 - Train Loss: 0.013560 - Val Loss: 0.027105\n",
-      "Epoch 42/50 - Train Loss: 0.012782 - Val Loss: 0.023414\n",
-      "Epoch 43/50 - Train Loss: 0.012195 - Val Loss: 0.023390\n",
-      "Epoch 44/50 - Train Loss: 0.013465 - Val Loss: 0.024878\n",
-      "Epoch 45/50 - Train Loss: 0.012459 - Val Loss: 0.023246\n",
-      "Epoch 46/50 - Train Loss: 0.012497 - Val Loss: 0.026652\n",
-      "Epoch 47/50 - Train Loss: 0.011987 - Val Loss: 0.025369\n",
-      "Epoch 48/50 - Train Loss: 0.012402 - Val Loss: 0.027600\n",
-      "Epoch 49/50 - Train Loss: 0.013528 - Val Loss: 0.033123\n",
-      "Epoch 50/50 - Train Loss: 0.012859 - Val Loss: 0.032817\n",
+      "Epoch 1/50\n",
+      "Epoch 1/50 - Train Loss: 0.063506 - Val Loss (DD rmse only): 0.292512\n",
+      "Epoch 2/50\n",
+      "Epoch 2/50 - Train Loss: 0.042122 - Val Loss (DD rmse only): 0.217455\n",
+      "Epoch 3/50\n",
+      "Epoch 3/50 - Train Loss: 0.028085 - Val Loss (DD rmse only): 0.184153\n",
+      "Epoch 4/50\n",
+      "Epoch 4/50 - Train Loss: 0.023285 - Val Loss (DD rmse only): 0.167401\n",
+      "Epoch 5/50\n",
+      "Epoch 5/50 - Train Loss: 0.018907 - Val Loss (DD rmse only): 0.163365\n",
+      "Epoch 6/50\n",
+      "Epoch 6/50 - Train Loss: 0.018611 - Val Loss (DD rmse only): 0.167465\n",
+      "Epoch 7/50\n",
+      "Epoch 7/50 - Train Loss: 0.016566 - Val Loss (DD rmse only): 0.147809\n",
+      "Epoch 8/50\n",
+      "Epoch 8/50 - Train Loss: 0.015831 - Val Loss (DD rmse only): 0.144978\n",
+      "Epoch 9/50\n",
+      "Epoch 9/50 - Train Loss: 0.015232 - Val Loss (DD rmse only): 0.141037\n",
+      "Epoch 10/50\n",
+      "Epoch 10/50 - Train Loss: 0.015528 - Val Loss (DD rmse only): 0.143791\n",
+      "Epoch 11/50\n",
+      "Epoch 11/50 - Train Loss: 0.014674 - Val Loss (DD rmse only): 0.138505\n",
+      "Epoch 12/50\n",
+      "Epoch 12/50 - Train Loss: 0.014626 - Val Loss (DD rmse only): 0.142658\n",
+      "Epoch 13/50\n",
+      "Epoch 13/50 - Train Loss: 0.014504 - Val Loss (DD rmse only): 0.148200\n",
+      "Epoch 14/50\n",
+      "Epoch 14/50 - Train Loss: 0.015753 - Val Loss (DD rmse only): 0.150354\n",
+      "Epoch 15/50\n",
+      "Epoch 15/50 - Train Loss: 0.014321 - Val Loss (DD rmse only): 0.142109\n",
+      "Epoch 16/50\n",
+      "Epoch 16/50 - Train Loss: 0.014576 - Val Loss (DD rmse only): 0.140463\n",
+      "Epoch 17/50\n",
+      "Epoch 17/50 - Train Loss: 0.014555 - Val Loss (DD rmse only): 0.142817\n",
+      "Epoch 18/50\n",
+      "Epoch 18/50 - Train Loss: 0.015196 - Val Loss (DD rmse only): 0.143179\n",
+      "Epoch 19/50\n",
+      "Epoch 19/50 - Train Loss: 0.014060 - Val Loss (DD rmse only): 0.151592\n",
+      "Epoch 20/50\n",
+      "Epoch 20/50 - Train Loss: 0.014385 - Val Loss (DD rmse only): 0.143143\n",
+      "Epoch 21/50\n",
+      "Epoch 21/50 - Train Loss: 0.014227 - Val Loss (DD rmse only): 0.147168\n",
+      "Epoch 22/50\n",
+      "Epoch 22/50 - Train Loss: 0.014197 - Val Loss (DD rmse only): 0.142940\n",
+      "Epoch 23/50\n",
+      "Epoch 23/50 - Train Loss: 0.013779 - Val Loss (DD rmse only): 0.143889\n",
+      "Epoch 24/50\n",
+      "Epoch 24/50 - Train Loss: 0.014380 - Val Loss (DD rmse only): 0.142697\n",
+      "Epoch 25/50\n",
+      "Epoch 25/50 - Train Loss: 0.013463 - Val Loss (DD rmse only): 0.143482\n",
+      "Epoch 26/50\n",
+      "Epoch 26/50 - Train Loss: 0.013745 - Val Loss (DD rmse only): 0.144017\n",
+      "Epoch 27/50\n",
+      "Epoch 27/50 - Train Loss: 0.013204 - Val Loss (DD rmse only): 0.146027\n",
+      "Epoch 28/50\n",
+      "Epoch 28/50 - Train Loss: 0.012965 - Val Loss (DD rmse only): 0.164692\n",
+      "Epoch 29/50\n",
+      "Epoch 29/50 - Train Loss: 0.014518 - Val Loss (DD rmse only): 0.155357\n",
+      "Epoch 30/50\n",
+      "Epoch 30/50 - Train Loss: 0.013392 - Val Loss (DD rmse only): 0.161475\n",
+      "Epoch 31/50\n",
+      "Epoch 31/50 - Train Loss: 0.013007 - Val Loss (DD rmse only): 0.150761\n",
+      "Epoch 32/50\n",
+      "Epoch 32/50 - Train Loss: 0.013205 - Val Loss (DD rmse only): 0.162389\n",
+      "Epoch 33/50\n",
+      "Epoch 33/50 - Train Loss: 0.012978 - Val Loss (DD rmse only): 0.170640\n",
+      "Epoch 34/50\n",
+      "Epoch 34/50 - Train Loss: 0.013612 - Val Loss (DD rmse only): 0.185729\n",
+      "Epoch 35/50\n",
+      "Epoch 35/50 - Train Loss: 0.013300 - Val Loss (DD rmse only): 0.170703\n",
+      "Epoch 36/50\n",
+      "Epoch 36/50 - Train Loss: 0.013405 - Val Loss (DD rmse only): 0.157975\n",
+      "Epoch 37/50\n",
+      "Epoch 37/50 - Train Loss: 0.012747 - Val Loss (DD rmse only): 0.149874\n",
+      "Epoch 38/50\n",
+      "Epoch 38/50 - Train Loss: 0.012857 - Val Loss (DD rmse only): 0.157343\n",
+      "Epoch 39/50\n",
+      "Epoch 39/50 - Train Loss: 0.013094 - Val Loss (DD rmse only): 0.156571\n",
+      "Epoch 40/50\n",
+      "Epoch 40/50 - Train Loss: 0.014452 - Val Loss (DD rmse only): 0.195220\n",
+      "Epoch 41/50\n",
+      "Epoch 41/50 - Train Loss: 0.013560 - Val Loss (DD rmse only): 0.164136\n",
+      "Epoch 42/50\n",
+      "Epoch 42/50 - Train Loss: 0.012782 - Val Loss (DD rmse only): 0.152911\n",
+      "Epoch 43/50\n",
+      "Epoch 43/50 - Train Loss: 0.012195 - Val Loss (DD rmse only): 0.152888\n",
+      "Epoch 44/50\n",
+      "Epoch 44/50 - Train Loss: 0.013465 - Val Loss (DD rmse only): 0.157414\n",
+      "Epoch 45/50\n",
+      "Epoch 45/50 - Train Loss: 0.012459 - Val Loss (DD rmse only): 0.152386\n",
+      "Epoch 46/50\n",
+      "Epoch 46/50 - Train Loss: 0.012497 - Val Loss (DD rmse only): 0.162702\n",
+      "Epoch 47/50\n",
+      "Epoch 47/50 - Train Loss: 0.011987 - Val Loss (DD rmse only): 0.159087\n",
+      "Epoch 48/50\n",
+      "Epoch 48/50 - Train Loss: 0.012402 - Val Loss (DD rmse only): 0.165785\n",
+      "Epoch 49/50\n",
+      "Epoch 49/50 - Train Loss: 0.013528 - Val Loss (DD rmse only): 0.181004\n",
+      "Epoch 50/50\n",
+      "Epoch 50/50 - Train Loss: 0.012859 - Val Loss (DD rmse only): 0.180203\n",
       "Model saved as best_mlp_no2_baseline.pth in Model folder\n"
      ]
     }
