minor changes, finalise notebooks and files after mlp pde solver with const ad eq

--- a/src/run_baseline_mlp.ipynb
+++ b/src/run_baseline_mlp.ipynb
@@ -142,7 +142,7 @@
     {
      "data": {
       "text/plain": [
-       "<torch._C.Generator at 0x7fba7e609f90>"
+       "<torch._C.Generator at 0x7fef869e5fb0>"
       ]
      },
      "execution_count": 4,
@@ -196,13 +196,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Imported train_2017_combined_u.csv\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Imported train_2017_combined_u.csv\n",
       "Imported train_2017_combined_y.csv\n",
       "Imported val_2017_combined_u.csv\n",
       "Imported val_2017_combined_y.csv\n",
