--- a/src/run_baseline_mlp_2017.ipynb
+++ b/src/run_baseline_mlp_2017.ipynb
@@ -129,6 +129,15 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "from config import *"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -136,16 +145,16 @@
      "text": [
       "BASE_DIR:  /home/rachel/forecasting_smog_PEML\n",
       "MODEL_PATH:  /home/rachel/forecasting_smog_PEML/src/results/models\n",
-      "MINMAX_PATH:  /home/rachel/forecasting_smog_PEML/data/data_combined/pollutants_minmax.csv\n"
+      "MINMAX_PATH:  /home/rachel/forecasting_smog_PEML/data/data_combined/only_2017/pollutants_minmax_2017.csv\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<torch._C.Generator at 0x7fef869e5fb0>"
+       "<torch._C.Generator at 0x7f2a785b5fb0>"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -154,21 +163,13 @@
     "HABROK = bool(0)                  # set to True if using HABROK; it will print\n",
     "                                  # all stdout to a .txt file to log progress\n",
     "\n",
-    "BASE_DIR = Path.cwd().parents[0] # set it to the root directory of the project, not src\n",
-    "MODEL_PATH = BASE_DIR /\"src\" / \"results\" / \"models\"\n",
-    "MINMAX_PATH = BASE_DIR  / \"data\" / \"data_combined\" / \"pollutants_minmax.csv\"\n",
     "\n",
     "print(\"BASE_DIR: \", BASE_DIR)\n",
     "print(\"MODEL_PATH: \", MODEL_PATH)\n",
-    "print(\"MINMAX_PATH: \", MINMAX_PATH)\n",
+    "print(\"MINMAX_PATH: \", MINMAX_PATH_2017)\n",
     "\n",
     "torch.manual_seed(34)             # set seed for reproducibility\n",
     "\n",
-    "N_HOURS_U = 24 * 3               # number of hours to use for input (number of days * 24 hours)\n",
-    "N_HOURS_Y = 24                    # number of hours to predict (1 day * 24 hours)\n",
-    "N_HOURS_STEP = 24                 # \"sampling rate\" in hours of the data; e.g. 24 \n",
-    "                                  # means sample an I/O-pair every 24 hours\n",
-    "                                  # the contaminants and meteorological vars\n",
     "\n",
     "# Change this according to the data you want to use\n",
     "YEARS = [2017]\n",
@@ -176,7 +177,7 @@
     "VAL_YEARS = [2017]\n",
     "TEST_YEARS = [2017]\n",
     "\n",
-    "LOSS_FUNC = \"Physics_MSE\" # choose from \"MSE\" and \"Physics_MSE\"\n",
+    "LOSS_FUNC = \"MSE\" # choose from \"MSE\" and \"Physics_MSE\"\n",
     "torch.random.manual_seed(34)"
    ]
   },
@@ -189,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -211,21 +212,21 @@
     "# which exact .csv files get extracted, change the\n",
     "# lists in the get_dataframes() definition\n",
     "\n",
-    "train_input_frames = get_dataframes('train', 'u', YEARS)\n",
-    "train_output_frames = get_dataframes('train', 'y', YEARS)\n",
+    "train_input_frames = get_dataframes('train', 'u', YEARS, DATASET_PATH_2017)\n",
+    "train_output_frames = get_dataframes('train', 'y', YEARS, DATASET_PATH_2017)\n",
     "\n",
-    "val_input_frames = get_dataframes('val', 'u', YEARS)\n",
-    "val_output_frames = get_dataframes('val', 'y', YEARS)\n",
+    "val_input_frames = get_dataframes('val', 'u', YEARS, DATASET_PATH_2017)\n",
+    "val_output_frames = get_dataframes('val', 'y', YEARS, DATASET_PATH_2017)\n",
     "\n",
-    "test_input_frames = get_dataframes('test', 'u', YEARS)\n",
-    "test_output_frames = get_dataframes('test', 'y', YEARS) \n",
+    "test_input_frames = get_dataframes('test', 'u', YEARS, DATASET_PATH_2017)\n",
+    "test_output_frames = get_dataframes('test', 'y', YEARS, DATASET_PATH_2017)\n",
     "\n",
     "print(\"Successfully loaded data\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -263,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -300,7 +301,7 @@
        " [2592 rows x 9 columns]]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
