moved loss.py variables to confid, retuned linear shift 2017 with results

--- a/src/run_baseline_mlp_allyears.ipynb
+++ b/src/run_baseline_mlp_allyears.ipynb
@@ -1243,7 +1243,7 @@
     "    )\n",
     "\n",
     "    # Train and return validation loss\n",
-    "    val_loss, training_time = model.train_model(train_loader, val_loader, epochs=50, lr=lr, weight_decay=weight_decay, device=device)\n",
+    "    val_loss, _ = model.train_model(train_loader, val_loader, epochs=50, lr=lr, weight_decay=weight_decay, device=device)\n",
     "    \n",
     "    return val_loss\n",
     "\n",
