--- a/src/run_baseline_mlp_2017.ipynb
+++ b/src/run_baseline_mlp_2017.ipynb
@@ -889,7 +889,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -12234,7 +12234,7 @@
     "    )\n",
     "\n",
     "    # Train and return validation loss\n",
-    "    val_loss = model.train_model(train_loader, val_loader, epochs=50, lr=lr, weight_decay=weight_decay, device=device)\n",
+    "    val_loss, _ = model.train_model(train_loader, val_loader, epochs=50, lr=lr, weight_decay=weight_decay, device=device)\n",
     "    \n",
     "    return val_loss\n",
     "\n",
