--- a/src/run_baseline_mlp_allyears.ipynb
+++ b/src/run_baseline_mlp_allyears.ipynb
@@ -1287,6 +1287,52 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Save the params to a file"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "import json\n",
+    "\n",
+    "file_path = f\"{RESULTS_PATH}/best_params/{BESTPARAMS_FILENAME}\"\n",
+    "\n",
+    "with open(file_path, \"w\") as f:\n",
+    "    json.dump(best_params, f, indent=4)  # Pretty format for readability\n",
+    "\n",
+    "print(f\"Best Hyperparameters saved to {file_path}\")\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Read params from file"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "with open(file_path, \"r\") as f:\n",
+    "    best_params = json.load(f)  # Automatically converts it to a dictionary\n",
+    "\n",
+    "print(\"Loaded Best Parameters:\", best_params)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 25,
    "metadata": {},
