--- a/src/run_baseline_mlp_2017.ipynb
+++ b/src/run_baseline_mlp_2017.ipynb
@@ -173,7 +173,7 @@
     {
      "data": {
       "text/plain": [
-       "<torch._C.Generator at 0x7f54c8109fb0>"
+       "<torch._C.Generator at 0x7f9a482b1fb0>"
       ]
      },
      "execution_count": 6,
@@ -210,7 +210,7 @@
     {
      "data": {
       "text/plain": [
-       "<torch._C.Generator at 0x7f54c8109fb0>"
+       "<torch._C.Generator at 0x7f9a482b1fb0>"
       ]
      },
      "execution_count": 7,
@@ -233,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -288,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -968,6 +968,17 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import json\n",
+    "\n",
+    "file_path = f\"{RESULTS_PATH}/best_params/{BESTPARAMS_FILENAME}\""
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -976,13 +987,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Best Hyperparameters saved to /home/rachel/forecasting_smog_PEML/src/results/best_params/best_params_MLP_no2_MSE_2017.txt\n"
+     ]
+    }
+   ],
    "source": [
-    "import json\n",
     "\n",
-    "file_path = f\"{RESULTS_PATH}/best_params/{BESTPARAMS_FILENAME}\"\n",
     "\n",
     "with open(file_path, \"w\") as f:\n",
     "    json.dump(best_params, f, indent=4)  # Pretty format for readability\n",
@@ -999,9 +1016,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loaded Best Parameters: {'n_hidden_layers': 5, 'n_hidden_units': 163, 'lr': 0.0031656932205590947, 'weight_decay': 3.408518000104593e-06, 'batch_size': 16}\n"
+     ]
+    }
+   ],
    "source": [
     "with open(file_path, \"r\") as f:\n",
     "    best_params = json.load(f)  # Automatically converts it to a dictionary\n",
@@ -1150,7 +1175,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "best_model_baseline = BasicMLP(\n",
+    "    N_INPUT_UNITS=train_dataset.__n_features_in__(),\n",
+    "    N_HIDDEN_LAYERS=best_params[\"n_hidden_layers\"],\n",
+    "    N_HIDDEN_UNITS=best_params[\"n_hidden_units\"],\n",
+    "    N_OUTPUT_UNITS=train_dataset.__n_features_out__(),\n",
+    "    loss_function=LOSS_FUNC,\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -1158,9 +1198,9 @@
      "output_type": "stream",
      "text": [
       "Test MSE Loss: 128.045925\n",
-      "Test RMSE Loss: 12.601719\n",
+      "Test RMSE Loss: 12.667165\n",
       "Test SMAPE Loss: 32.458074%\n",
-      "Total Inference Time: 0.06 seconds\n"
+      "Total Inference Time: 0.04 seconds\n"
      ]
     }
    ],
@@ -1176,23 +1216,15 @@
     "df_minmax = pd.read_csv(MINMAX_PATH, sep=';')\n",
     "min_value = df_minmax[\"min\"].values\n",
     "max_value = df_minmax[\"max\"].values\n",
-    "mse, rmse, smape, inference_time = best_model_baseline.test_model(test_loader, min_value=min_value, max_value=max_value, device=\"cpu\")\n",
+    "mse, rmse, smape, inference_time = best_model_baseline.test_model(test_loader, min_value=min_value, max_value=max_value, device=device)\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Results saved as results_MLP_no2_MSE_2017.csv in Results/metrics folder\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import csv\n",
     "\n",
